--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,16 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets: 
+  - assets/cardbackgrounds/Common.png
+  - assets/cardbackgrounds/Normal.jpg
+  - assets/cardbackgrounds/Rare.jpg
+  - assets/cardbackgrounds/Epic.jpg
+  - assets/cardbackgrounds/SuperRare.jpg
+  - assets/cardbackgrounds/UltraRare.jpg
+  - assets/cardbackgrounds/Ultimate.jpg
+  - assets/cardbackgrounds/SecretRarity.jpg
+  - assets/cardbackgrounds/Godly.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
