--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
   uses-material-design: true
 
   assets: 
-  - assets/cardbackgrounds/Common.png
+  - assets/cardbackgrounds/Common.jpg
   - assets/cardbackgrounds/Normal.jpg
   - assets/cardbackgrounds/Rare.jpg
   - assets/cardbackgrounds/Epic.jpg
